--- a/q/274665.html
+++ b/q/274665.html
@@ -26,21 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>106</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
+<tr d-ix="0"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
 <tr d-ix="1"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
 <tr d-ix="2"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
 <tr d-ix="3"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 106 bytes</h1>
-<pre><code>ＮθＦ…·²θＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
+<pre><code>ＮθＦ…²φＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
 </code></pre>
-<p><a href="https://tio.run/##XVDLasMwEDzXX7HHFahQeis5mUBLoElN6c34oMabWFiWElkKTUq/3V05cR8xWDYzq5nZWTfKr50yw7CwuxhWsXsnj3sxyzbOAy7s2sReH@hV2S3hvYS9EDBSuTEYJSxdHY1DLaEVTBWxbxKsWSHve721uFS7pOOpIxuoZnEJj9oE9uHB3Nbp8soF/JUyIj0Smv8qjYSyZW3@VBXTpynmScBndnOZLNwONbM1s9cYJWza7E8iAXoDmEK8eJy7aMN5o5TviPSzZjtlG@dTBfU1d67gJKHg5nA8yrZKjUh4I2@VP2IeFramj@Rxx3C51JbHJrQ5O1N6@WJZ8vGPq9hmln1lhdccdK567k5b3cUOL8Wy/ZMnlX6fyW5DM26/H6PPhuFhuD2Ybw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBasMwEDzXr9BRAhXSXnNyAy2BJjWht@CDGm9sYVmyZSk0KX27u2snbROBkL0zGs3MrlJ@55QZhqVtY1jH5gM878Q82TvP@NLuTOz1ATbKlsAfJeuEYCOUGsOjZCtXROO4lqwWCGWxr2isUSHte11avlIt6XhowAYoUFyyZ20CvoPE1BZ0ee0C/5MygpZk1bVKJdm2Rm088hzh08XmSbCv5O7MzFzLNaIForczoNkl2T9Hguk942TizfOFizZMicjfkcNvzPribeRTBcUtNlVwkizD5kjlHbxV/sifVA/0PxNTjJW2SEjD0hbwSdnq0SDufCJs8byCc5SfJ99J5jUaXKgeO9NWN7EZ6zmXik@/eFD0@Qq2DNWYvKM@N3AATy7GDPNheJgN9wfzAw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
+<p><a href="https://tio.run/##XVBBasMwEDzXr9jjClQovZWcTKDFEKem9GZ8UG3FFpalRJZKk9K3uysnaXEEks3M7uzs1J1wtRV6mjKzD34bhg/p8MBWyc46wDdhWomPHHaMwYykWmPgkNsmaIuKQ8@IKsLYRVhRYzqOqjWYiz1mpnZykMbLhjQ5PCvtSZ4KU9PE5q31@C@lWTwcuqVKx6HsSZs@VUX06eruxOA7ubtUFnaPitiG2FtMRmxuWTpioHaA0cSrw7UNxp83iv6OKP/W7K/e5voYQXPLnSM4cSh0GHF@yr6KiXB4l84Id8TUZ6aRX3HGA8FlrgyVXdHuPFnGS41lSc@Cq2jMKvlJCqfI6FqMlJ0yaggDXoKl8S9Oivi7kab13bz9Yba@mqan6f5T/wI" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBbsIwEDw3r/BxLbkS7ZVTilSEVGiEekM5uGRJrDg2ODYqVH17unagFUSK7OzMTmZm20i3tVIPw8Lsg1@F7hMdHPg021nHYC1NjfAs2I5zlia51hAEW9oqaAtKsJYTVIS@iWNFi3nfq9rAUu5hYbYOOzQeK9IU7FVpT/JEzE0Vl1fWw7@U5vERrLlVaQTbtKRNR1kSfL66O3P2nT1cmIXdgyK0IvR@hnGWVm4dcaZ2DKKJdwczG4wfE0V/J8C/mO3VW@LHCqp7bKzgLFihQx9VPtAZ6U7wInuM3xM@xlgqQ4TcL0yFXzFbmwzSW46EDZ03cEny0@wnK5wigzPZU2fKqC50qZ5LqfTruUMZr29oat@k5IfY5xqP6KKLlGE6DE@T4fGofwE" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
 <pre><code>Ｎθ
 </code></pre>
 <p>Input <code>n</code>.</p>
-<pre><code>Ｆ…·²θＦ⬤υ﹪ικ⊞υι
+<pre><code>Ｆ…²φＦ⬤υ﹪ικ⊞υι
 </code></pre>
-<p>Find all the primes up to <code>n</code>.</p>
+<p>Find all the primes up to <s><code>n</code></s> <code>1000</code>. (If we could assume that we are only given those inputs that have a valid permutation then by @Bubbler's result we only need the primes up to <code>13</code>; that would then save a further byte.)</p>
 <pre><code>≔Ｅ⊕θΦυ∧ι¬﹪ιλη
 </code></pre>
 <p>For all the numbers up to <code>n</code>, get a list of primes that are factors of it, except for <code>0</code>, where we use an empty list.</p>
