--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240805T091155Z
+"   /golfscore                                      20240805T110401Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/136927.html">Draw the Swiss Flag                             : 0136927</a>
 <a href="q/274665.html">Lexicographically earliest permutation of the in: 0274665</a>
 <a href="q/262098.html">Wrt Hello World prgrm bt wth n vwls             : 0262098</a>
