--- a/q/274690.html
+++ b/q/274690.html
@@ -26,9 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
+<tr d-ix="0"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
+<tr d-ix="1"><td>138</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="2"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
+
+<pre class="lang-apl prettyprint-override"><code>+.*∘3=∘⍎∘∊⍕¨
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT///X1tP61HHDGNbIPGotw9EdnQ96p16aMX/tEdtE0BCXc2Petc86t1yaL3xo7aJj/qmBgc5A8kQD8/g/@ohRaUlGZVW6lxpGoY6pjrGmkCGkY6RjiGYZaJjoGMOYhgaAFkGcJYhWBlQlYWOqSWIbWmhYwREELVmZjqmBgY6xsZgMyyAEqbGFjom5kaaXOpuiTnFMOuMdKCWmOqYgRhmcDvgJpiALTIA2QkkNQE" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
+<p><code>+.*∘3</code> sum of cubes</p>
+<p><code>=∘⍎∘∊</code> equal to the execution of the enlisted (flattened)</p>
+<p><code>⍕¨</code> stringification of each</p>
+</div>
+<div id="pu1" class="pu"><h1>C++, 138 bytes</h1>
+<pre><code>#include&lt;iostream&gt;
+int main(){int a,b,c;std::cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;int d=100*a+10*b+c;d-=a*a*a+b*b*b+c*c*c;if(d==0)std::cout&lt;&lt;1;else std::cout&lt;&lt;0;}
+</code></pre>
+<p><a href="https://tio.run/##TYxBCsMgEEX3PYXQTaIJKKWbjM5ddLRlIDGhmlXp2W1CN@VtPu/Bp20bn0StXTnTvMdkeS31lfyCF85VLJ5z17/P6YcwEJQap4k4I3rEgEhwtuiM1tIro2VQBHF0Xh6oIMMp5AHwo4vO6f73sO7VWgNpLkn8GQ2f1oy4i9sX" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>ṅ?3e∑=
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4bmFPzNl4oiRPSIsIiIsIlsxLDUsM11cblsyLDIsMTNdXG5bNCwwLDddXG5bMTAsMCwwXVxuWzEwLDAsMV1cblsyMiwxOCw1OV1cbls5OCwyOCwyN11cblsxNjYsNTAwLDMzM11cbls4MjgsNTM4LDQ3Ml1cblsxLDIsM11cbls0LDUsNl1cbls2LDAsMF1cblsxNjYsNTAwLDMzNF1cblsyMDAsMCwyMDBdIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
