--- a/q/274690.html
+++ b/q/274690.html
@@ -26,11 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
-<tr d-ix="1"><td>138</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="0"><td>186</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="1"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="2"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1>C++, 186 bytes</h1>
+<pre><code>#include&lt;iostream&gt;
+using namespace std;int main(){int a,b,c;std::cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x=to_string(a)+to_string(b)+to_string(c);int d=a*a*a+b*b*b+c*c*c;if(d==stoi(x))cout&lt;&lt;1;else cout&lt;&lt;0;}
+</code></pre>
+<p><a href="https://tio.run/##TYxBCsMgEEX3PYXQjSYp2C5r9CplHG0YSDREA4HSs1vTLFoeDP/NMB/n@TIglnKmgOPqfE8x5cXDZE5rojCwAJNPM6BnKTtFIbMJKHDx2iN0tkNVD/c7UjAGjLHG7Jtl/910jo8jcxDtT@y/oPjWOg1NpbVNpcWmoujJndYpR@KbEBjX3PdX5cfk2SFSvUu5Sckkq/MD" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a> Fixed solution, now works for multiple-digit integers.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>+.*∘3=∘⍎∘∊⍕¨
 </code></pre>
@@ -38,12 +44,6 @@
 <p><code>+.*∘3</code> sum of cubes</p>
 <p><code>=∘⍎∘∊</code> equal to the execution of the enlisted (flattened)</p>
 <p><code>⍕¨</code> stringification of each</p>
-</div>
-<div id="pu1" class="pu"><h1>C++, 138 bytes</h1>
-<pre><code>#include&lt;iostream&gt;
-int main(){int a,b,c;std::cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;int d=100*a+10*b+c;d-=a*a*a+b*b*b+c*c*c;if(d==0)std::cout&lt;&lt;1;else std::cout&lt;&lt;0;}
-</code></pre>
-<p><a href="https://tio.run/##TYxBCsMgEEX3PYXQTaIJKKWbjM5ddLRlIDGhmlXp2W1CN@VtPu/Bp20bn0StXTnTvMdkeS31lfyCF85VLJ5z17/P6YcwEJQap4k4I3rEgEhwtuiM1tIro2VQBHF0Xh6oIMMp5AHwo4vO6f73sO7VWgNpLkn8GQ2f1oy4i9sX" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>ṅ?3e∑=
