--- a/q/274690.html
+++ b/q/274690.html
@@ -26,13 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>046</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
-<tr d-ix="1"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
-<tr d-ix="2"><td>186</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="1"><td>046</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
+<tr d-ix="2"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
 <tr d-ix="3"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="4"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
+<div id="pu0" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
+<pre><code>#include&lt;iostream&gt;
+using namespace std;int main(){int a,b,c;cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x=to_string(a)+to_string(b)+to_string(c);int d=a*a*a+b*b*b+c*c*c;cout&lt;&lt;(d==stoi(x));}
+</code></pre>
+<p><a href="https://tio.run/##TYxNCsMgEEb3PUWgGzXpCdS5ShlHCQP1h2ogEHp2a9pFy9u8b/E@KuW2EvV@5USPzQfDubZnwAiXrXJap4Qx1IIUptq85tSmiJyEPE7FxS2kiRMAAjgA0qM@s922fP@6QDn/hvsfJD@P3qIazE4NZlIDTXlrxghvbW2ZxS6lfvX@Bg" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+<p>(The extra -5 bytes are from a random std:: I left in by accident.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c:a**3+b**3+c**3==int(f'{a}{b}{c}')
 </code></pre>
@@ -43,18 +50,12 @@
 </code></pre>
 <p><a href="https://tio.run/##PY3dCoMwDIXvfYreiM0Io1pbf8A3GRSHygStxbnNPX2XbjhomkPynRP33m6LlX5oLn5q52vXsr2@P2Y@t45LdjZmdcvLGNwBmma0G5enJO6SeAc/LCsbraNige6f7YRscb3lAqCOGHNrMAycIADPU1QoIeIZZpgGkaPAgnoqSIhDpAEhokRVkaxKzOh9Oa1RCYFSBndJYyVLzIss7Cj0l6lQU9dH5N@Th1wRLtAPHw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(a,b,c)=&gt;a**3+b**3+c**3==[a]+b+c
 </code></pre>
 <p><a href="https://tio.run/##PY3BDoMgEETv/RLQaYMgiAf6I00PSLVpY8TUpr9PAQ3JZvKyOzvztj@7uc9r/Z4X/xjDZIjFAEfN1fll8/N4mf2TkFDWtqpEPSRxUYy52Xs91C7Qw0FPE2kgIRJwcDSZWjB0@cYisUJNtkWXhuwT9xo8zu5VCpIxCJEzdDxIodF2fG/hOLIlVAJVostjm/NZqopKwx8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Nothing to say.</p>
-</div>
-<div id="pu2" class="pu"><h1>C++, 186 bytes</h1>
-<pre><code>#include&lt;iostream&gt;
-using namespace std;int main(){int a,b,c;std::cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x=to_string(a)+to_string(b)+to_string(c);int d=a*a*a+b*b*b+c*c*c;if(d==stoi(x))cout&lt;&lt;1;else cout&lt;&lt;0;}
-</code></pre>
-<p><a href="https://tio.run/##TYxBCsMgEEX3PYXQjSYp2C5r9CplHG0YSDREA4HSs1vTLFoeDP/NMB/n@TIglnKmgOPqfE8x5cXDZE5rojCwAJNPM6BnKTtFIbMJKHDx2iN0tkNVD/c7UjAGjLHG7Jtl/910jo8jcxDtT@y/oPjWOg1NpbVNpcWmoujJndYpR@KbEBjX3PdX5cfk2SFSvUu5Sckkq/MD" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a> Fixed solution, now works for multiple-digit integers.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
 
