--- a/q/274690.html
+++ b/q/274690.html
@@ -26,20 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
-<tr d-ix="1"><td>046</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
-<tr d-ix="2"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
-<tr d-ix="3"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
-<tr d-ix="4"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Jelly</td><td>240805T115728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274697#274697">Jonathan</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
+<tr d-ix="2"><td>046</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
+<tr d-ix="3"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
+<tr d-ix="4"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
+<tr d-ix="5"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>*3S⁼V
+</code></pre>
+<p>A monadic Link that accepts a list of non-negative integers (with or without any leading zeros<sup>*</sup>) and yields <code>1</code> if the list concatenates to the sum of the cubes of its elements or <code>0</code> if not.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8/1/LOPhR456w/4fbj056uHPG///RRjpGOobGsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<pre><code>*3S⁼V - Link: list, A
+ 3    - three
+*     - {A} exponentiate {3} (vectorises)
+  S   - sum
+    V - evaluate {A} as Jelly code* -&gt; concatenated integer
+   ⁼  - {SumOfCubes} equals {that}?
+</code></pre>
+<p><sup>* Leading zeros produce a side effect of printing zeros before yielding the result.</sup></p>
+</div>
+<div id="pu1" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
 <pre><code>#include&lt;iostream&gt;
 using namespace std;int main(){int a,b,c;cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x=to_string(a)+to_string(b)+to_string(c);int d=a*a*a+b*b*b+c*c*c;cout&lt;&lt;(d==stoi(x));}
 </code></pre>
 <p><a href="https://tio.run/##TYxNCsMgEEb3PUWgGzXpCdS5ShlHCQP1h2ogEHp2a9pFy9u8b/E@KuW2EvV@5USPzQfDubZnwAiXrXJap4Qx1IIUptq85tSmiJyEPE7FxS2kiRMAAjgA0qM@s922fP@6QDn/hvsfJD@P3qIazE4NZlIDTXlrxghvbW2ZxS6lfvX@Bg" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 <p>(The extra -5 bytes are from a random std:: I left in by accident.)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c:a**3+b**3+c**3==int(f'{a}{b}{c}')
 </code></pre>
@@ -50,14 +66,14 @@ using namespace std;int main(){int a,b,c;cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x
 </code></pre>
 <p><a href="https://tio.run/##PY3dCoMwDIXvfYreiM0Io1pbf8A3GRSHygStxbnNPX2XbjhomkPynRP33m6LlX5oLn5q52vXsr2@P2Y@t45LdjZmdcvLGNwBmma0G5enJO6SeAc/LCsbraNige6f7YRscb3lAqCOGHNrMAycIADPU1QoIeIZZpgGkaPAgnoqSIhDpAEhokRVkaxKzOh9Oa1RCYFSBndJYyVLzIss7Cj0l6lQU9dH5N@Th1wRLtAPHw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>(a,b,c)=&gt;a**3+b**3+c**3==[a]+b+c
 </code></pre>
 <p><a href="https://tio.run/##PY3BDoMgEETv/RLQaYMgiAf6I00PSLVpY8TUpr9PAQ3JZvKyOzvztj@7uc9r/Z4X/xjDZIjFAEfN1fll8/N4mf2TkFDWtqpEPSRxUYy52Xs91C7Qw0FPE2kgIRJwcDSZWjB0@cYisUJNtkWXhuwT9xo8zu5VCpIxCJEzdDxIodF2fG/hOLIlVAJVostjm/NZqopKwx8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Nothing to say.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>+.*∘3=∘⍎∘∊⍕¨
 </code></pre>
@@ -66,7 +82,7 @@ using namespace std;int main(){int a,b,c;cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x
 <p><code>=∘⍎∘∊</code> equal to the execution of the enlisted (flattened)</p>
 <p><code>⍕¨</code> stringification of each</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>ṅ?3e∑=
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4bmFPzNl4oiRPSIsIiIsIlsxLDUsM11cblsyLDIsMTNdXG5bNCwwLDddXG5bMTAsMCwwXVxuWzEwLDAsMV1cblsyMiwxOCw1OV1cbls5OCwyOCwyN11cblsxNjYsNTAwLDMzM11cbls4MjgsNTM4LDQ3Ml1cblsxLDIsM11cbls0LDUsNl1cbls2LDAsMF1cblsxNjYsNTAwLDMzNF1cblsyMDAsMCwyMDBdIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
