--- a/q/274690.html
+++ b/q/274690.html
@@ -26,21 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>APL+WIN</td><td>240805T122405Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274698#274698">Graham</a></td></tr>
-<tr d-ix="1"><td>005</td><td>Jelly</td><td>240805T115728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274697#274697">Jonathan</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
-<tr d-ix="3"><td>046</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
+<tr d-ix="1"><td>017</td><td>APL+WIN</td><td>240805T122405Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274698#274698">Graham</a></td></tr>
+<tr d-ix="2"><td>005</td><td>Jelly</td><td>240805T115728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274697#274697">Jonathan</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
 <tr d-ix="4"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
 <tr d-ix="5"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="6"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 45 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda a,b,c:a**3+b**3+c**3-int(f'{a}{b}{c}')
+</code></pre>
+<p><a href="https://tio.run/##PU3RCoMwDHzfV/TN1mXQWlursD/ZS@uUCVqLyGCI396lDgfJ5UjuLuGzvmYvY39/xNFO7mmJBQdtY/NcXl2CFuE2@JX22Wb3ze1bu2cs9vNCBh@wyWQD7d52BDKHzlPOWHMhJCyHieaoYixSAQoku9ACChCJlMChwik4En4SkSSoMKBqpLWBAuvQaQ2Kc5AyuQ2ulTRQVkW6YegvU4HGqc/Iv6dMuTx9QGRf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-1 byte thanks to Jonathan Allan</p>
+<p>Returns truthy (nonzero integers) for <code>False</code> cases and falsey (zero integers) for <code>True</code> cases.</p>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda x:sum(map(3 .__rpow__,x))-int(3*'%d'%x)
+</code></pre>
+<p><a href="https://tio.run/##PY3dCoMwDIXvfYreiM3IRm1trcLeZCAdKhP8Kc5t7ulduuGgaQ7Jd078e7lNo9ra82Xr3XCtHVvL@2Pgg/NcsVNVzX56VRWuAMduXLg6JHGdxCts7TSzbvRULMDN0/XIJt@MXACUEWN@DoaWEwSw8RQ1Koi4RIlpEBkKzKmngoTYRRoQIizqgmRhUdL7csagFgKVCm5LY60sZrkMOwr9ZWo01M0e@fdkIVeEC/TDBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, 17 bytes</h1>
 <p>Prompts for integers.</p>
 <pre><code>(⍎∊⍕¨s)=+/(s←⎕)*3
 </code></pre>
 <p><a href="https://tio.run/##PY1NCsJADIX3OUWWrVKc/04XHkBQPEOpjAgDFmblBbQILW56B8/hUeYiY0ZUCMlHXt5L2/vqcGn9@Vh1vg3h1KU4zbttvD4kEG32RBzicHOpiOMUh3sc59czlOvlqggk0lG5kIkuIDngqFGCA4UMa3AInBEx2nyAEwiB3KJuCBuLgqrOsjGoGUMps93SWkuLqhZZQ/EN1Whoml/k36NyLssfqMMb" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>*3S⁼V
 </code></pre>
 <p>A monadic Link that accepts a list of non-negative integers (with or without any leading zeros<sup>*</sup>) and yields <code>1</code> if the list concatenates to the sum of the cubes of its elements or <code>0</code> if not.</p>
@@ -55,23 +68,12 @@
 </code></pre>
 <p><sup>* Leading zeros produce a side effect of printing zeros before yielding the result.</sup></p>
 </div>
-<div id="pu2" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
+<div id="pu3" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
 <pre><code>#include&lt;iostream&gt;
 using namespace std;int main(){int a,b,c;cin&gt;&gt;a&gt;&gt;b&gt;&gt;c;string x=to_string(a)+to_string(b)+to_string(c);int d=a*a*a+b*b*b+c*c*c;cout&lt;&lt;(d==stoi(x));}
 </code></pre>
 <p><a href="https://tio.run/##TYxNCsMgEEb3PUWgGzXpCdS5ShlHCQP1h2ogEHp2a9pFy9u8b/E@KuW2EvV@5USPzQfDubZnwAiXrXJap4Qx1IIUptq85tSmiJyEPE7FxS2kiRMAAjgA0qM@s922fP@6QDn/hvsfJD@P3qIazE4NZlIDTXlrxghvbW2ZxS6lfvX@Bg" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 <p>(The extra -5 bytes are from a random std:: I left in by accident.)</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 46 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda a,b,c:a**3+b**3+c**3==int(f'{a}{b}{c}')
-</code></pre>
-<p><a href="https://tio.run/##PU3LCoMwELz3K3IzsXvIw2gU/JNeEqtU0BhECkX89nRjsbA7O@zOzIbP9lq8ikP7iJOd3dMSCw66xua5ursEHULbjn6jQ7bbY3fH3h0Zi8OyktEHbDLbQPu3nYAsofeUM9bcCAnraaI5qhiLVIAGxW5UggSRSAEcKpyCI@EXEUmCCgO6RlobkFinrixBcw5KJbfBtVYGikqmG4b@MjWUOMsr8u8pUi5PHxDZFw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 47 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda x:sum(map(3 .__rpow__,x))==int(3*'%d'%x)
-</code></pre>
-<p><a href="https://tio.run/##PY3dCoMwDIXvfYreiM0Io1pbf8A3GRSHygStxbnNPX2XbjhomkPynRP33m6LlX5oLn5q52vXsr2@P2Y@t45LdjZmdcvLGNwBmma0G5enJO6SeAc/LCsbraNige6f7YRscb3lAqCOGHNrMAycIADPU1QoIeIZZpgGkaPAgnoqSIhDpAEhokRVkaxKzOh9Oa1RCYFSBndJYyVLzIss7Cj0l6lQU9dH5N@Th1wRLtAPHw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
 
