--- a/q/274690.html
+++ b/q/274690.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Uiua</td><td>240805T125637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274700#274700">mousetai</a></td></tr>
+<tr d-ix="0"><td>1714</td><td>Uiua</td><td>240805T125637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274700#274700">mousetai</a></td></tr>
 <tr d-ix="1"><td>036</td><td>Python 3</td><td>240805T125107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274699#274699">Albert.L</a></td></tr>
 <tr d-ix="2"><td>045</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
 <tr d-ix="3"><td>017</td><td>APL+WIN</td><td>240805T122405Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274698#274698">Graham</a></td></tr>
@@ -36,10 +36,11 @@
 <tr d-ix="7"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="8"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 17 chars</h1>
-<pre><code>=⊃(/+××..|⍜°⋕/⍚⊂)
+<div id="pu0" class="pu"><h1>Uiua, <del>17</del> 14 chars</h1>
+<p>-3 chars thanks to Chunes by replacing <code>fork</code> with <code>on</code></p>
+<pre><code>=/+××..⟜⍜°⋕/⍚⊂
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_12_0-dev_3__PeKKgygvK8OXw5cuLnzijZzCsOKLlS_ijZriioIpCg==" rel="nofollow noreferrer">Pad Link</a></p>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_3__MV81XzMKPS8rw5fDly4u4p-c4o2cwrDii5Uv4o2a4oqCCg==" rel="nofollow noreferrer">Pad Link</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
