--- a/q/274690.html
+++ b/q/274690.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>033</td><td>Haskell</td><td>240805T142051Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274704#274704">DPD-</a></td></tr>
-<tr d-ix="1"><td>017</td><td>K ngn/k</td><td>240805T135303Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274703#274703">akamayu</a></td></tr>
-<tr d-ix="2"><td>006</td><td>Stack control</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Stack control</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
+<tr d-ix="1"><td>033</td><td>Haskell</td><td>240805T142051Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274704#274704">DPD-</a></td></tr>
+<tr d-ix="2"><td>017</td><td>K ngn/k</td><td>240805T135303Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274703#274703">akamayu</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Uiua</td><td>240805T125637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274700#274700">mousetai</a></td></tr>
 <tr d-ix="4"><td>030</td><td>R</td><td>240805T133004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274701#274701">pajonk</a></td></tr>
 <tr d-ix="5"><td>036</td><td>Python 3</td><td>240805T125107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274699#274699">Albert.L</a></td></tr>
@@ -40,7 +40,19 @@
 <tr d-ix="11"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="12"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Haskell, 33 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a>, 6 characters</h1>
+<pre><code>:³+⇆◡=
+</code></pre>
+<h2>Explanation</h2>
+<pre><code>:  - duplicates original array
+³  - cubes every array element
++  - sum of array elements
+⇆  - swap to another array
+◡  - reversed concatenates values from array
+=  - check if values are equals
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Haskell, 33 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>(==).show.sum.map(^3)&lt;*&gt;(&gt;&gt;=show)
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7NyfmfmVuQX1Si4JyfV1KUn6Pnm5@XmPI/zVbD1lZTrzgjv1yvuDRXLzexQCPOWNNGy07Dzs4WJKz5PzcxM0/BViEln0sBCApKS4JLinzyFFQUQNJAKk0h2lBHwVRHwTgWrwojkIr/AA" rel="nofollow noreferrer">Try it online!</a></p>
@@ -51,22 +63,10 @@
 <li><code>&lt;*&gt;</code> feeds the input to both arguments</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
 <pre><code>{(,/$x)~$+/x*x*x}
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxVjUEOgzAMBO95BuJA6VY4ThwCJ57SE29AQvD2rqmo1DjKrpy1Z533DkO7Pc72OWw96whhXSIMiapQRDcZgtE/hEZuEz3CRIVNtFOF8l65UmAiSMmnK9uWKvKo4S1z8/o/zUVUfEGGQi0357coO0wcy/cDeL4mYQ==" rel="nofollow noreferrer">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a>, 6 characters</h1>
-<pre><code>:³+⇆◡=
-</code></pre>
-<h2>Explanation</h2>
-<pre><code>:  - duplicates original array
-³  - cubes every array element
-+  - sum of array elements
-⇆  - swap to another array
-◡  - concatenates values from array
-=  - check if values are equals
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1>Uiua, <del>17</del> <del>14</del> 12 chars</h1>
 <p>-3 chars thanks to Chunes by replacing <code>fork</code> with <code>on</code></p>
