--- a/q/274690.html
+++ b/q/274690.html
@@ -47,11 +47,11 @@
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?MAzYSU" rel="nofollow noreferrer">Try it!</a></p>
 <h3>Explanation</h3>
-<pre><code>$-&gt;a-&gt;        # a function taking a list named a
-=             # are the following two values equal?
-do join a     # concatenation of input as a number
-∑             # and sum of...
-map a=&gt;[&amp;^3]  # inputs cubed
+<pre><code>$-&gt;a-&gt;        ; a function taking a list named a
+=             ; are the following two values equal?
+do join a     ; concatenation of input as a number
+∑             ; and sum of...
+map a=&gt;[&amp;^3]  ; inputs cubed
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Google Sheets, 31 bytes</h1>
